styling: fix vertical spacing of tasks in TaskList - turns out we cannot determine a procedure to extract a city name from a Nominatim API call

--- a/admin-portal/src/app/_styles/TaskList.css
+++ b/admin-portal/src/app/_styles/TaskList.css
@@ -127,6 +127,12 @@
     align-self: "self-end";
 }
 
+.task-list-grandparent {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+
 .task-list-parent {
     display: flex;
     gap: 1rem;
